fixed the overlapping text issue in course cards

--- a/styles/portfolio-item.module.css
+++ b/styles/portfolio-item.module.css
@@ -4,6 +4,7 @@
   padding-top: 20px;
   border-radius: 10px;
   margin-bottom: 8px;
+  height: 375px;
   min-height: 100%;
   position: relative;
 }
